--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
 <!-- Write your code here! -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Example Page</title>
+</head>
+<body>
+  <h1>Main Heading</h1>
+  <p>
+    This is a paragraph with <strong>strong</strong>, <em>emphasized</em> text, and a <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">link to MDN</a>.
+  </p>
+  <table>
+    <tr>
+      <td>Table data</td>
+    </tr>
+  </table>
+</body>
+</html>
